# gitignore

./: CMakeLists.txt  README.md  build.bat  main.cpp  makefile
include/: Gitignore.h
src/: Client.cpp  Client.h  Gitignore.cpp  Gitignore.h  Temp.cpp  Temp.h
